2008-08-19	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/bsp.h, network/network.c, spi/spi_init.c, startup/cpuinit.c,
	startup/uboot_support.c: Fixed warnings.

2008-08-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, startup/bspstart.c, startup/cpuinit.c: For the
	MPC8313ERDB -- The BAT entry for the eLBC was missing and add
	 hard reset sequence in bsp_cleanup().

2008-08-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* README.mpc8313erdb: Some first cut notes on running with U-Boot.

2008-08-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspstart.c: Time was running too slow with it taking 10
	seconds for RTEMS to advance 5.

2008-08-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, preinstall.am: Add dummy linkcmds so autoconf tests work
	on installed BSP.
	* startup/linkcmds: New file.

2008-08-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/bspstart.c: Fixed calculation of bsp_click_per_usec.

2008-08-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* start/start.S: Clear environment pointer for bootcard.  Fixed wrong
	address increment in mpc83xx_zero_4().

2008-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Add stub for U-Boot support. Hopefully someone more
	knowledgeable than I can provide a real address and length.
	* startup/uboot_support.c: New file.

2008-07-24	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac, include/bsp.h, startup/bspstart.c,
	startup/linkcmds.base: Support RAM allocation via bootcard.

2008-07-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/bspstart.c: Enable cache after CPU initialization.  Clear
	only workspace memory area.

2008-07-18	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* network/network.c:
	mpc8249eamds support for Gigabit Ethernet works again

2008-07-18	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* network/network.c:
	mpc8249eamds uses gmii mode
